[package]
name = "strapi_files_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart", "futures-channel"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10.5"
base64 = "0.21.2"
dotenv = "0.15.0"
futures = "0.3.28"  